[fix bug 1409094] Link alignment issue on /de/firefox/new/

--- a/media/css/firefox/new/quantum/_other-platforms.scss
+++ b/media/css/firefox/new/quantum/_other-platforms.scss
@@ -24,6 +24,16 @@ $color-quantum-blue: #0a84ff;
     &:hover {
         text-decoration: underline;
     }
+
+    @media #{$mq-tablet} {
+        text-align: left;
+    }
+}
+
+html[dir="rtl"] #other-platforms-modal-link {
+    @media #{$mq-tablet} {
+        text-align: right;
+    }
 }
 
 /* -------------------------------------------------------------------------- */
